higress/helm/examples/gateway/01-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: higress-gateway
  namespace: higress-system
spec:
  gatewayClassName: higress-gateway
  listeners:
    - name: default
      hostname: "*.apikv.com.com" # 你的域名
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
