higress/helm/examples/gateway/03-http-router.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http
  namespace: default
spec:
  parentRefs:
    - name: higress-gateway
      namespace: higress-system
  hostnames: ["gateway.apikv.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: my-added-header
                value: added-value-higress
      backendRefs:
        - name: foo-service
          port: 5678
    - matches:
        - path:
            type: PathPrefix
            value: /by-nacos
      backendRefs:
        - name: service-provider.DEFAULT-GROUP.public.nacos
          group: networking.higress.io
